PAGE-FIX: fixed the width of the whole page because of an aligning in the hero section. Fixed it

--- a/public/styles/hero.css
+++ b/public/styles/hero.css
@@ -128,7 +128,7 @@
      
     .hero-content {
       position: absolute;
-      align-items: flex-start;
+      align-self: flex-start;
       justify-self: center;
       justify-content:space-evenly;
       height: 80vh;
